[project]
name = "observability"
version = "1.0.0"
description = "Production-grade observability stack"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    
    # Metrics
    "prometheus-client>=0.19.0",
    
    # Tracing
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
